modules/gdscript/tests/scripts/Traits/analyzer/errors/invalid_overridding_trait_variable.gd
trait SomeTrait:
	var some_variable: Node

class SomeClass:
	uses SomeTrait
	var some_variable: Node2D

func test():
	print("ok")
